@@ -7,6 +7,9 @@ What's New in astroid 4.0.0?
 ============================
 Release date: TBA
 
+* Removed internal functions ``infer_numpy_member``, ``name_looks_like_numpy_member``, and
+  ``attribute_looks_like_numpy_member`` from ``astroid.brain.brain_numpy_utils``.
+
 * Fix crashes with large positive and negative list multipliers.
 
   Closes #2521
